# xraymcExample3

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
data/ICRP145/MRCP_AF/: MRCP_AF.ele  MRCP_AF.node
data/ICRP145/MRCP_AM/: MRCP_AM.ele  MRCP_AM.node
data/STL/: blanket.stl  carm.stl  ceilingShield.stl  table.stl
data/exposureData/: testExposure.csv
include/: carm.hpp  exposurereader.hpp  icrp110phantomreader.hpp
src/: exposurereader.cpp  icrp110phantomreader.cpp  main.cpp
